ReviewsLayout + AppFooter-overflow(fixed)

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,5 +27,7 @@
 body{
   width: 100vw;
   height: 100vh;
+  background: var(--ps-color-gs5);
   font-family: "Montserrat", serif;
+  overflow-x: hidden;
 }
